...
  DepotMenus(this._db, this._assoId);

  final FirebaseFirestore _db;
  final String _assoId;

  CollectionReference<Map<String, dynamic>> get _menus =>
      _db.collection('associations').doc(_assoId).collection('menus');

  CollectionReference<Map<String, dynamic>> _produits(String menuId) =>
      _menus.doc(menuId).collection('produits');

  int _parNom(String a, String b) =>
      a.toLowerCase().compareTo(b.toLowerCase());
...
